- added missing updates for 3.3.5
- fixed periodic auras