@@ -324,23 +324,6 @@ namespace WCell.RealmServer.Entities
 			//    m_Movement.Stop();
 			//}
 
-			// calc damage
-			if (weapon == m_offhandWeapon)
-			{
-				action.Damage = Utility.Random((int)MinOffHandDamage, (int)MaxOffHandDamage + 1);
-			}
-			else
-			{
-				if (weapon.IsRanged)
-				{
-					action.Damage = Utility.Random((int)MinRangedDamage, (int)MaxRangedDamage + 1);
-				}
-				else
-				{
-					action.Damage = Utility.Random((int)MinDamage, (int)MaxDamage + 1);
-				}
-			}
-
 			target.IsInCombat = true;
 
 			action.Victim = target;
@@ -351,27 +334,6 @@ namespace WCell.RealmServer.Entities
 			{
 				// Pending combat ability
 				var ability = m_pendingCombatAbility;
-				// get boni, damage and let the Spell impact
-				var multiplier = 100;
-				SpellEffect effect = null;
-				foreach (var effectHandler in ability.Handlers)
-				{
-					if (effectHandler.Effect.IsStrikeEffectFlat)
-					{
-						action.Damage += effectHandler.CalcEffectValue();
-					}
-					else if (effectHandler.Effect.IsStrikeEffectPct)
-					{
-						multiplier += effectHandler.CalcEffectValue();
-					}
-
-					if (effect == null)
-					{
-						// use the first effect
-						effect = effectHandler.Effect;
-					}
-				}
-				action.Damage = (action.Damage * multiplier) / 100;
 
 				// send pending animation
 				if (ability.IsInstant)
@@ -388,17 +350,17 @@ namespace WCell.RealmServer.Entities
 				m_pendingCombatAbility = null;
 
 				action.Schools = ability.Spell.SchoolMask;
-				action.SpellEffect = effect;
+				action.SpellEffect = ability.Spell.Effects[0];
 
-				if (ability.Spell.IsAreaSpell)
+				if (ability.Targets.Count > 0)
 				{
-					var totalDmg = action.Damage;
 					action.IsDot = false;
 
 					// AoE spell
 					foreach (var targ in ability.Targets)
 					{
-						action.Reset(this, (Unit)targ, weapon, totalDmg);
+						var dmg = GetWeaponDamage(weapon, ability);
+						action.Reset(this, (Unit)targ, weapon, dmg);
 						action.DoAttack();
 						if (ability.Spell.IsDualWieldAbility)
 						{
@@ -410,6 +372,9 @@ namespace WCell.RealmServer.Entities
 				else
 				{
 					// single target
+
+					// calc damage
+					action.Damage = GetWeaponDamage(weapon, m_pendingCombatAbility);
 					if (!action.DoAttack() &&
 						ability.Spell.AttributesExC.HasFlag(SpellAttributesExC.RequiresTwoWeapons))
 					{
@@ -427,9 +392,13 @@ namespace WCell.RealmServer.Entities
 			}
 			else
 			{
+				// no combat ability
 				m_extraAttacks += 1;
 				do
 				{
+					// calc damage
+					action.Damage = GetWeaponDamage(weapon, m_pendingCombatAbility);
+
 					action.Schools = weapon.Damages.AllSchools();
 					if (action.Schools == DamageSchoolMask.None)
 					{
@@ -441,6 +410,49 @@ namespace WCell.RealmServer.Entities
 				} while (--m_extraAttacks > 0);
 			}
 			action.OnFinished();
+		}
+
+		/// <summary>
+		/// Returns random damage for the given weapon
+		/// </summary>
+		public int GetWeaponDamage(IWeapon weapon, SpellCast pendingAbility)
+		{
+			int damage;
+			if (weapon == m_offhandWeapon)
+			{
+				damage = Utility.Random((int)MinOffHandDamage, (int)MaxOffHandDamage + 1);
+			}
+			else
+			{
+				if (weapon.IsRanged)
+				{
+					damage = Utility.Random((int)MinRangedDamage, (int)MaxRangedDamage + 1);
+				}
+				else
+				{
+					damage = Utility.Random((int)MinDamage, (int)MaxDamage + 1);
+				}
+			}
+
+			if (pendingAbility != null && pendingAbility.IsCasting)
+			{
+				// get boni, damage and let the Spell impact
+				var multiplier = 100;
+
+				foreach (var effectHandler in pendingAbility.Handlers)
+				{
+					if (effectHandler.Effect.IsStrikeEffectFlat)
+					{
+						damage += effectHandler.CalcEffectValue();
+					}
+					else if (effectHandler.Effect.IsStrikeEffectPct)
+					{
+						multiplier += effectHandler.CalcEffectValue();
+					}
+				}
+				damage = (damage * multiplier + 50) / 100;
+			}
+			return damage;
 		}
 		#endregion
 
